Update dark mode them to use more sane colors and fix select in darkmode

--- a/app/javascript/stylesheets/application.sass
+++ b/app/javascript/stylesheets/application.sass
@@ -1,4 +1,6 @@
 @import "~bulma/bulma.sass"
+
+$link-dark: hsl(209, 71%,  63%) // Bug or something ... this is the value in Bulma, but something is overriding
 @import "~bulma-prefers-dark/bulma-prefers-dark.sass"
 
 @import url('https://rsms.me/inter/inter.css')
